# coup_server

./: README.md  application.py  pyproject.toml
connection/: connectionManage.py
models/entity/: actions.py  letter.py  player.py  user.py
models/schemas/: playerSchema.py  userPublic.py
models/services/: readyServices.py
