[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["DuarteVonFaul <duarteriograndense@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
websocket = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
